#!tyml @cargo/Cargo
[package]
name = "toyst"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
bnf_rules = "0.1.7"
extension-fn = "1.2.0"
inkwell = { version = "0.8.0", features = [ "llvm21-1" ] }
regex = "1.12.2"
typeid = "1.0.3"

[[bin]]
name = "toyst"
path = "src/bin/toyst.rs"
